# sppu

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  find_headers.cmake  sdd_model.slxc
cmake/: Cpplint.cmake
include/algorithms/: algorithms.h
include/camera/: .CountourHdDriver.h  .QContourHDCamera.h  CountourHdDriver.h  JpgBuffConverter.h  QContourHDCamera.h  QContourHdCamera.h  QCvVcCamera.h  QICamera.h  QRtspCamera.h  ~ContourHdCamera.h
include/format/: Format.h  FormatsContainer.h
include/gui/: QAppWindow.h  QCameraWindow.h  QConditionalControl.h  QGridDimanicPlots.h  QGridDynamicPlots.h  QISddStateWidget.h  QISddStateWidgetFactory.h  QModelPlots.h  QSddDeviceControl.h  QSddModelControl.h  QSddModelSaver.h  QSddModelView.h  QSddSerialPortControl.h  QSddView.h
include/gui/camera/: QCameraWindow.h  QImageView.h
include/gui/model_saver/: QIConnectionAdapter.h  QIConnectionWrapper.h  QModelDataGetter.h  QPointPositionInserter.h  QSddModelSaver.h  SavingData.h
include/model/: InputGenerator.h  PwdInputGenerator.h  QModelOutput.h  QSddModelExecutor.h  SddModel.h
include/model/parser/: ParsedObject.h  QSddModelJsonSerializer.h  QSddModelXmlSerializer.h  SddModelDescriptor.h
include/sdd_protocol/: Light.h  LightPackage.h  Mode.h  ModePackage.h  Package.h  PackageBuffer.h  PackageError.h  PackageFactory.h  Position.h  PositionPackage.h  PwmPackage.h  State.h  StatePackage.h
include/sdd_protocol/connect/: IConnection.h  PackageBuffer.h  QComPort.h  QIConnection.h  QSddJsonSerializer.h  QSerialPortConnection.h  States.h
include/serialization/: Field.h  Message.h
lib/qcustomplot/: qcustomplot.cpp
lib/simulink/sppu/sdd_model_grt_rtw/: buildInfo.mat  builtin_typeid_types.h  defines.txt  multiword_types.h  pm_printf.c  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_backsubrr_dbl.c  rt_nonfinite.h  (+11 more)
resource/: img.qrc  model_config.json
src/: CMakeLists.txt  main_ModelToComPort.cpp  main_SddClient.cpp  main_camera.cpp
src/algorithms/: CMakeLists.txt  algorithms.cpp
src/camera/: .CountorHDDriver.cpp  .QContourHDCamera.cpp  CountorHDDriver.cpp  JpgBuffConverter.cpp  QContourHDCamera.cpp  QContourHdCamera.cpp  QCvVcCamera.cpp  QRtspCamera.cpp  ~ContourHdCamera.cpp
src/gui/: QAppWindow.cpp  QConditionalControl.cpp  QGridDimanicPlots.cpp  QGridDynamicPlots.cpp  QISddStateWidgetFactory.cpp  QModelPlots.cpp  QSddDeviceControl.cpp  QSddModelControl.cpp  QSddModelSaver.cpp  QSddModelView.cpp  QSddSerialPortControl.cpp  QSddView.cpp
src/gui/camera/: QCameraWindow.cpp  QImageView.cpp
src/gui/model_saver/: QIConnectionAdapter.cpp  QIConnectionWrapper.cpp  QPointPositionInserter.cpp  QSddModelSaver.cpp
src/model/: PwdInputGenerator.cpp  QModelOutput.cpp  QSddModelExecutor.cpp  SddModel.cpp
src/model/parser/: QSddModelJsonSerializer.cpp  QSddModelXmlSerializer.cpp
src/resource/: img.qrc
src/sdd_protocol/: Light.cpp  LightPackage.cpp  Mode.cpp  ModePackage.cpp  Package.cpp  PackageBuffer.cpp  PackageError.cpp  PackageFactory.cpp  Position.cpp  PositionPackage.cpp  PwmPackage.cpp  State.cpp  StatePackage.cpp
src/sdd_protocol/connect/: IConnection.cpp  PackageBuffer.cpp  QComPort.cpp  QIConnection.cpp  QSddJsonSerializer.cpp  QSerialPortConnection.cpp
src/serialization/: BinaryBuffer.cpp  Field.cpp  Message.cpp
sub_project/: sdd_model.slxc
sub_project/find_in_image/: CMakeLists.txt  find_circle.py  find_red_circle.asv  find_red_circle.m  hsv_control (копия).py  hsv_control.py  hsv_control2.py  lib_jpeg_example.cpp  libjpeg_read_from_buffer.cpp  main.cpp  main_find_red_circle.cpp  sliding_window.py  sliding_window_bridhnes.py
sub_project/http/: CMakeLists.txt  http_client.m  http_server.py  link.txt  make_plot.py  simple_http_server.py
sub_project/http/http_lib/: CMakeLists.txt  http.cpp  http_client.cpp  http_client.h
sub_project/http/jsoncpp_example/: CMakeLists.txt  main.cpp
sub_project/http/mex/: Makefile  neurla_http_client_mex.cpp  neurla_http_client_mex.mexa64  neurla_http_client_sfunc.cpp  neurla_http_client_sfunc.exp  neurla_http_client_sfunc.lib  neurla_http_client_sfunc.mexa64
sub_project/http/mex/windows/MEXFunction1/: MEXFunction1.sln
sub_project/http/mex/windows/MEXFunction1/MEXFunction1/: MEXFunction1.cpp  MEXFunction1.vcxproj
sub_project/info_materials/: Пример состояний обекта управления приводящий к противоречию в обучающей выборке.odt
sub_project/ip_cam/: CMakeLists.txt  README.md  main.py
sub_project/ip_cam/include/: Shot.h
sub_project/ip_cam/src/: Shot.cpp  main.cpp
sub_project/matlab/: MEXFunction1.mexw64  neurla_http_client_sfunc.mexw64  sdd_model.slxc
sub_project/matlab/img_process/: example_find.m  find_object_in_binary_img.m  objectDetect.m
sub_project/matlab/model/: MagneticInduction.eps  MagneticInduction.fig  config.m  ga_res.txt  http_request_neural.m  make_data.m  save_res_modeling.m  sdd_model.slx  sdd_model.slx.original  sdd_model.slx.r2020a  take_model_data.m  untitled.slx.autosave
sub_project/matlab/Магнитное поле двухслойной катушки/: A.m  BioSavarLaplass.m  CirclePoints.m  DoubleSpirale.m  MagneticToSolenoids.m  SingleSpirale2.m  SpiralePoints.m  magnetic.m  Винтовая Возвратная Линия.m  Винтовая Линия.m
sub_project/ml/: README.md  data2.json  data3.json  epoch.last  learn_forward_neural_emulator.py  main.py  model.py  models_save.json  multipoc_test.py  multiprocess_app.py  neural.py  test.json  test_models.json  utils.py  video_process.py
sub_project/ml/ipython/: CircleLR.ipynb  EvalueteDynamycSystemByANN.ipynb  ExampleTensorflow.ipynb  LoadModelInfo.ipynb  MakeDfFromSddPackage.ipynb  MatlabResultModelingToGraph.ipynb  NeuralApproxModel2-Copy1.ipynb  NeuralApproxModel2.ipynb  NeuralOde.ipynb  OdeTest.ipynb  Untitled.ipynb  approximating by neural network.ipynb  checkpoint  load_info.py
sub_project/ml/resnet_model/: NeuralApproxModel2.ipynb  weights.chpt.data-00000-of-00002  weights.chpt.data-00001-of-00002  weights.chpt.index
sub_project/python/: http_client.m  http_server.py  make_plot.py
test/: CMakeLists.txt  PackageBuffer_test.cpp  Test_QSddModelJsonSerializer.h  main.cpp
(+327 files in other folders)
